# campus

./: Cargo.toml  README.md
src/: lib.rs  prelude.rs
src/model/: class.rs  demographic.rs  grade.rs  id.rs  mod.rs  session.rs  status.rs
